// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Object metadata update should fail when labelIdentifier is not a TEXT or NAME field 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
    },
    "message": "(0 , _utils.isLabelIdentifierFieldMetadataTypes) is not a function",
  },
]
`;

exports[`Object metadata update should fail when labelIdentifier is not a known field metadata id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "labelIdentifierFieldMetadataId validation failed: related field metadata not found",
  },
]
`;

exports[`Object metadata update should fail when labelIdentifier is not a uuid 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "labelIdentifierFieldMetadataId must be a UUID",
  },
]
`;
